--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -50,6 +50,7 @@
     "FRACTION_FIT = 1.0\n",
     "\n",
     "# If true, plots about the loss and accuracy will be generated on wandb\n",
+    "# TODO try to use this for all the metrics\n",
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
