--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,9 +23,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected 10 malicious clients out of 100\n",
-      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
-      "num_gpus:  0.041666666666666664\n"
+      "Selected 0 malicious clients out of 10\n",
+      "Malicious client IDs: []\n",
+      "num_gpus:  0.1\n"
      ]
     }
    ],
@@ -34,14 +34,15 @@
     "random.seed(42)\n",
     "import yaml\n",
     "from attacks.attack_names import AttackNames\n",
+    "from detections.detection_names import DetectionNames\n",
     "\n",
     "# --- Experiment Settings ---\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 100\n",
+    "NUM_CLIENTS = 10\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.1\n",
+    "PERCENT_MALICIOUS = 0.0\n",
     "\n",
     "# Number of federation rounds\n",
     "NUM_ROUNDS = 20\n",
@@ -57,12 +58,12 @@
     "ATTACK_METHOD = AttackNames.random_weights_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = \"dagmm\"\n",
+    "DETECTION_METHOD = DetectionNames.no_detection\n",
     "# --- --- --- --- --- --- ---\n",
     "\n",
     "# ========\n",
     "ADDITIONAL_DETECTION_CONFIG = {}\n",
-    "if DETECTION_METHOD == \"dagmm\":\n",
+    "if DETECTION_METHOD.value == \"dagmm\":\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Set to True to collect training data for the DAGMM model.\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/dagmm_train_data/run_10\"  # Output directory of the training data of the current run.\n",
     "\n",
@@ -90,11 +91,11 @@
     "\n",
     "# Store the attack method as a .yaml file\n",
     "with open(\"./config/attack_method.yaml\", \"w\") as f:\n",
-    "     yaml.dump({\"attack_method\": ATTACK_METHOD.name}, f)\n",
+    "     yaml.dump({\"attack_method\": ATTACK_METHOD.value}, f)\n",
     "\n",
     "# Store the detection method as a .yaml file\n",
     "with open(\"./config/detection_method.yaml\", \"w\") as f:\n",
-    "    yaml.dump({\"detection_method\": DETECTION_METHOD}, f)\n",
+    "    yaml.dump({\"detection_method\": DETECTION_METHOD.value}, f)\n",
     "    yaml.dump(ADDITIONAL_DETECTION_CONFIG, f)\n",
     "\n",
     "import toml\n",
