Changed model to efficientnet. Added Jupyter Notebook to benchmark the model centrally.

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,9 +23,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected 0 malicious clients out of 10\n",
+      "Selected 0 malicious clients out of 100\n",
       "Malicious client IDs: []\n",
-      "num_gpus:  0.1\n"
+      "num_gpus:  0.041666666666666664\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
     "# --- Experiment Settings ---\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 10\n",
+    "NUM_CLIENTS = 100\n",
     "\n",
     "# Percentage of malicious clients\n",
     "PERCENT_MALICIOUS = 0.0\n",
@@ -96,7 +96,8 @@
     "# Store the detection method as a .yaml file\n",
     "with open(\"./config/detection_method.yaml\", \"w\") as f:\n",
     "    yaml.dump({\"detection_method\": DETECTION_METHOD.value}, f)\n",
-    "    yaml.dump(ADDITIONAL_DETECTION_CONFIG, f)\n",
+    "    if ADDITIONAL_DETECTION_CONFIG:\n",
+    "        yaml.dump(ADDITIONAL_DETECTION_CONFIG, f)\n",
     "\n",
     "import toml\n",
     "\n",
