--- a/data_visualization.ipynb
+++ b/data_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "a6541d99",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12 3\n"
+      "32 32\n"
      ]
     }
    ],
@@ -19,12 +19,12 @@
     "from task import fds\n",
     "\n",
     "trainloader, testloader = load_data(1, 100)\n",
-    "print(len(trainloader), len(testloader))"
+    "print(trainloader.batch_size, testloader.batch_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "b9ed4cd0",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
+   "id": "59a7c718",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "179"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Min number of samples for a partition\n",
+    "min(partitioner.load_partition(i).num_rows for i in range(0,100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "5d8f64ef",
    "metadata": {},
    "outputs": [
@@ -66,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "0bafd331",
    "metadata": {},
    "outputs": [
@@ -99,7 +121,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flwr-env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -113,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
