Evalutated LeNet-5 model centrally for MNIST

--- a/test_models.ipynb
+++ b/test_models.ipynb
@@ -10,39 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "52dee5dd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1/20] Test Accuracy: 69.36%,\t loss: 1.3011\n",
-      "[2/20] Test Accuracy: 77.20%,\t loss: 0.6734\n",
-      "[3/20] Test Accuracy: 78.65%,\t loss: 0.4603\n",
-      "[4/20] Test Accuracy: 79.49%,\t loss: 0.3249\n",
-      "[5/20] Test Accuracy: 80.24%,\t loss: 0.2329\n",
-      "[6/20] Test Accuracy: 80.06%,\t loss: 0.1738\n",
-      "[7/20] Test Accuracy: 80.60%,\t loss: 0.1481\n",
-      "[8/20] Test Accuracy: 80.76%,\t loss: 0.1256\n",
-      "[9/20] Test Accuracy: 81.20%,\t loss: 0.0998\n",
-      "[10/20] Test Accuracy: 80.64%,\t loss: 0.0900\n",
-      "[11/20] Test Accuracy: 81.06%,\t loss: 0.0816\n",
-      "[12/20] Test Accuracy: 81.53%,\t loss: 0.0743\n",
-      "[13/20] Test Accuracy: 81.57%,\t loss: 0.0559\n",
-      "[14/20] Test Accuracy: 81.81%,\t loss: 0.0569\n",
-      "[15/20] Test Accuracy: 81.73%,\t loss: 0.0522\n",
-      "[16/20] Test Accuracy: 82.16%,\t loss: 0.0479\n",
-      "[17/20] Test Accuracy: 82.59%,\t loss: 0.0474\n",
-      "[18/20] Test Accuracy: 82.12%,\t loss: 0.0621\n",
-      "[19/20] Test Accuracy: 82.11%,\t loss: 0.0511\n",
-      "[20/20] Test Accuracy: 82.33%,\t loss: 0.0384\n",
-      "Finished Training\n",
-      "Final Accuracy of the network on the 10000 test images: 82.33%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torchvision\n",
@@ -51,6 +22,7 @@
     "import torch.optim as optim\n",
     "import torchvision.models as models\n",
     "from torchvision.models import EfficientNet_B0_Weights\n",
+    "from torch.utils.data import DataLoader\n",
     "\n",
     "batch_size = 1024\n",
     "\n",
@@ -62,12 +34,12 @@
     "# Load CIFAR-10 dataset\n",
     "trainset = torchvision.datasets.CIFAR10(root='./data', train=True,\n",
     "                                        download=True, transform=transform)\n",
-    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=batch_size,\n",
+    "trainloader = DataLoader(trainset, batch_size=batch_size,\n",
     "                                          shuffle=True, num_workers=2)\n",
     "\n",
     "testset = torchvision.datasets.CIFAR10(root='./data', train=False,\n",
     "                                       download=True, transform=transform)\n",
-    "testloader = torch.utils.data.DataLoader(testset, batch_size=batch_size,\n",
+    "testloader = DataLoader(testset, batch_size=batch_size,\n",
     "                                         shuffle=False, num_workers=2)\n",
     "\n",
     "# Define the EfficientNet-B0 model\n",
@@ -102,8 +74,16 @@
     "            total += labels.size(0)\n",
     "            correct += (predicted == labels).sum().item()\n",
     "    accuracy = 100 * correct / total\n",
-    "    return accuracy\n",
-    "\n",
+    "    return accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ae6a5b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Train and evaluate the model\n",
     "num_epochs = 20  # You can adjust the number of epochs\n",
     "for epoch in range(num_epochs):\n",
@@ -127,26 +107,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "678984de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_model_parameters(net):\n",
+    "    total_params = sum(p.numel() for p in net.parameters())\n",
+    "    trainable_params = sum(p.numel() for p in net.parameters() if p.requires_grad)\n",
+    "    print(f\"Total parameters: {total_params:,}\")\n",
+    "    print(f\"Trainable parameters: {trainable_params:,}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e1f0bc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_model_parameters(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b142e5b",
+   "metadata": {},
+   "source": [
+    "MNIST\n",
+    "==="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9d11664",
+   "metadata": {},
+   "source": [
+    "from https://medium.com/@deepeshdeepakdd2/lenet-5-implementation-on-mnist-in-pytorch-c6f2ee306e37"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e4611677",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch import nn\n",
+    "\n",
+    "class LeNet5(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.feature = nn.Sequential(\n",
+    "            #1\n",
+    "            nn.Conv2d(in_channels=1, out_channels=6, kernel_size=5, stride=1, padding=2),   # 28*28->32*32-->28*28\n",
+    "            nn.Tanh(),\n",
+    "            nn.AvgPool2d(kernel_size=2, stride=2),  # 14*14\n",
+    "            \n",
+    "            #2\n",
+    "            nn.Conv2d(in_channels=6, out_channels=16, kernel_size=5, stride=1),  # 10*10\n",
+    "            nn.Tanh(),\n",
+    "            nn.AvgPool2d(kernel_size=2, stride=2),  # 5*5\n",
+    "            \n",
+    "        )\n",
+    "        self.classifier = nn.Sequential(\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(in_features=16*5*5, out_features=120),\n",
+    "            nn.Tanh(),\n",
+    "            nn.Linear(in_features=120, out_features=84),\n",
+    "            nn.Tanh(),\n",
+    "            nn.Linear(in_features=84, out_features=10),\n",
+    "        )\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        return self.classifier(self.feature(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e1e8a8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LeNet5(\n",
+       "  (feature): Sequential(\n",
+       "    (0): Conv2d(1, 6, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
+       "    (1): Tanh()\n",
+       "    (2): AvgPool2d(kernel_size=2, stride=2, padding=0)\n",
+       "    (3): Conv2d(6, 16, kernel_size=(5, 5), stride=(1, 1))\n",
+       "    (4): Tanh()\n",
+       "    (5): AvgPool2d(kernel_size=2, stride=2, padding=0)\n",
+       "  )\n",
+       "  (classifier): Sequential(\n",
+       "    (0): Flatten(start_dim=1, end_dim=-1)\n",
+       "    (1): Linear(in_features=400, out_features=120, bias=True)\n",
+       "    (2): Tanh()\n",
+       "    (3): Linear(in_features=120, out_features=84, bias=True)\n",
+       "    (4): Tanh()\n",
+       "    (5): Linear(in_features=84, out_features=10, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define transformations for MNIST\n",
+    "transform = transforms.Compose(\n",
+    "    [transforms.ToTensor(),\n",
+    "     transforms.Normalize((0.1307,), (0.3081,))]) # Mean and std for MNIST\n",
+    "\n",
+    "# Load MNIST dataset\n",
+    "trainset = torchvision.datasets.MNIST(root='./data', train=True,\n",
+    "                                        download=True, transform=transform)\n",
+    "trainloader = DataLoader(trainset, batch_size=batch_size,\n",
+    "                                          shuffle=True, num_workers=2, drop_last=True)\n",
+    "\n",
+    "testset = torchvision.datasets.MNIST(root='./data', train=False,\n",
+    "                                       download=True, transform=transform)\n",
+    "testloader = DataLoader(testset, batch_size=batch_size,\n",
+    "                                         shuffle=False, num_workers=2)\n",
+    "\n",
+    "# Instantiate the LeNet-5 model\n",
+    "model = LeNet5()\n",
+    "\n",
+    "# Define loss function and optimizer\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "# Set device\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "06daac47",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total parameters: 4,020,358\n",
-      "Trainable parameters: 4,020,358\n"
+      "[1/20] Test Accuracy: 89.41%,\t loss: 1.0143\n",
+      "[2/20] Test Accuracy: 93.67%,\t loss: 0.2995\n",
+      "[3/20] Test Accuracy: 95.42%,\t loss: 0.1925\n",
+      "[4/20] Test Accuracy: 96.71%,\t loss: 0.1353\n",
+      "[5/20] Test Accuracy: 97.22%,\t loss: 0.1009\n",
+      "[6/20] Test Accuracy: 97.84%,\t loss: 0.0801\n",
+      "[7/20] Test Accuracy: 98.18%,\t loss: 0.0660\n",
+      "[8/20] Test Accuracy: 98.35%,\t loss: 0.0557\n",
+      "[9/20] Test Accuracy: 98.35%,\t loss: 0.0490\n",
+      "[10/20] Test Accuracy: 98.49%,\t loss: 0.0431\n",
+      "[11/20] Test Accuracy: 98.64%,\t loss: 0.0386\n",
+      "[12/20] Test Accuracy: 98.62%,\t loss: 0.0349\n",
+      "[13/20] Test Accuracy: 98.68%,\t loss: 0.0310\n",
+      "[14/20] Test Accuracy: 98.82%,\t loss: 0.0287\n",
+      "[15/20] Test Accuracy: 98.75%,\t loss: 0.0263\n",
+      "[16/20] Test Accuracy: 98.87%,\t loss: 0.0237\n",
+      "[17/20] Test Accuracy: 98.89%,\t loss: 0.0215\n",
+      "[18/20] Test Accuracy: 98.88%,\t loss: 0.0188\n",
+      "[19/20] Test Accuracy: 98.98%,\t loss: 0.0184\n",
+      "[20/20] Test Accuracy: 98.96%,\t loss: 0.0168\n",
+      "Finished Training\n"
      ]
     }
    ],
    "source": [
-    "def print_model_parameters(net):\n",
-    "    total_params = sum(p.numel() for p in net.parameters())\n",
-    "    trainable_params = sum(p.numel() for p in net.parameters() if p.requires_grad)\n",
-    "    print(f\"Total parameters: {total_params:,}\")\n",
-    "    print(f\"Trainable parameters: {trainable_params:,}\")\n",
+    "# Train and evaluate the model\n",
+    "num_epochs = 20  # You can adjust the number of epochs\n",
+    "for epoch in range(num_epochs):\n",
+    "    running_loss = 0.0\n",
+    "    model.train()\n",
+    "    for i, data in enumerate(trainloader, 0):\n",
+    "        inputs, labels = data[0].to(device), data[1].to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        running_loss += loss.item() * inputs.size(0)\n",
     "\n",
+    "    epoch_loss = running_loss / len(trainloader.dataset)\n",
+    "    accuracy = evaluate(model, testloader, device)\n",
+    "    print(f'[{epoch + 1}/{num_epochs}] Test Accuracy: {accuracy:.2f}%,\\t loss: {epoch_loss:.4f}')\n",
+    "\n",
+    "print('Finished Training')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "73678327",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total parameters: 61,706\n",
+      "Trainable parameters: 61,706\n"
+     ]
+    }
+   ],
+   "source": [
     "print_model_parameters(model)"
    ]
   }
