Added LeNet-5 model. Enhanced DAGMM training.

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -38,6 +38,9 @@
     "\n",
     "# --- Experiment Settings ---\n",
     "\n",
+    "# Dataset: mnist or cifar10\n",
+    "DATASET = \"mnist\"\n",
+    "\n",
     "# Number of clients\n",
     "NUM_CLIENTS = 100\n",
     "\n",
@@ -45,7 +48,7 @@
     "PERCENT_MALICIOUS = 0.0\n",
     "\n",
     "# Number of federation rounds\n",
-    "NUM_ROUNDS = 20\n",
+    "NUM_ROUNDS = 25\n",
     "\n",
     "# Fraction of the clients to choose for training in one round.\n",
     "FRACTION_FIT = 1.0\n",
@@ -58,14 +61,14 @@
     "ATTACK_METHOD = AttackNames.random_weights_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.no_detection\n",
+    "DETECTION_METHOD = DetectionNames.dagmm_detection\n",
     "# --- --- --- --- --- --- ---\n",
     "\n",
     "# ========\n",
     "ADDITIONAL_DETECTION_CONFIG = {}\n",
     "if DETECTION_METHOD.value == \"dagmm\":\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Set to True to collect training data for the DAGMM model.\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/dagmm_train_data/run_10\"  # Output directory of the training data of the current run.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = True   # Set to True to collect training data for the DAGMM model.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/dagmm_train_data/\" + DATASET + \"/run_14\"  # Output directory of the training data of the current run.\n",
     "\n",
     "    with open(\"./dagmm/dagmm_anomaly_threshold.yaml\", \"r\") as f:\n",
     "            dagmm_threshold_config = yaml.safe_load(f)\n",
@@ -73,9 +76,11 @@
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold\"] = dagmm_threshold\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_ignore_up_to\"] = 0   # Does not perform the detection in the first x rounds\n",
     "\n",
-    "    with open(\"./dagmm/model_path.yaml\", \"r\") as f:\n",
-    "        dagmm_model_path = yaml.safe_load(f)\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_model_path\"] = dagmm_model_path[\"model_path\"]\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_model_path\"] = \"./dagmm/dagmm_model_mnist.pt\"\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_dimensions\"] = [61706, 1024, 256]  # Set the input dimension\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"latent_dim\"] = 64\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"estimation_hidden_size\"] = 16\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"n_gmm\"] = 8\n",
     "# ========\n",
     "\n",
     "num_malicious = max(0, int(NUM_CLIENTS * PERCENT_MALICIOUS))\n",
@@ -85,6 +90,11 @@
     "print(\"Malicious client IDs:\", malicious_clients) \n",
     "\n",
     "import yaml\n",
+    "\n",
+    "# Store the dataset to use as a .yaml file\n",
+    "with open(\"./config/dataset.yaml\", \"w\") as f:\n",
+    "    yaml.dump({\"dataset\": DATASET}, f)\n",
+    "\n",
     "# Store the list of malicious clients as a .yaml file\n",
     "with open(\"./config/malicious_clients.yaml\", \"w\") as f:\n",
     "    yaml.dump({\"malicious_clients\": malicious_clients}, f)\n",
