--- a/test_models.ipynb
+++ b/test_models.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "52dee5dd",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "678984de",
    "metadata": {},
    "outputs": [],
@@ -148,73 +148,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "e4611677",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch import nn\n",
-    "\n",
-    "class LeNet5(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.feature = nn.Sequential(\n",
-    "            #1\n",
-    "            nn.Conv2d(in_channels=1, out_channels=6, kernel_size=5, stride=1, padding=2),   # 28*28->32*32-->28*28\n",
-    "            nn.Tanh(),\n",
-    "            nn.AvgPool2d(kernel_size=2, stride=2),  # 14*14\n",
-    "            \n",
-    "            #2\n",
-    "            nn.Conv2d(in_channels=6, out_channels=16, kernel_size=5, stride=1),  # 10*10\n",
-    "            nn.Tanh(),\n",
-    "            nn.AvgPool2d(kernel_size=2, stride=2),  # 5*5\n",
-    "            \n",
-    "        )\n",
-    "        self.classifier = nn.Sequential(\n",
-    "            nn.Flatten(),\n",
-    "            nn.Linear(in_features=16*5*5, out_features=120),\n",
-    "            nn.Tanh(),\n",
-    "            nn.Linear(in_features=120, out_features=84),\n",
-    "            nn.Tanh(),\n",
-    "            nn.Linear(in_features=84, out_features=10),\n",
-    "        )\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        return self.classifier(self.feature(x))"
+    "from models.lenet5 import LeNet5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7e1e8a8d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "LeNet5(\n",
-       "  (feature): Sequential(\n",
-       "    (0): Conv2d(1, 6, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
-       "    (1): Tanh()\n",
-       "    (2): AvgPool2d(kernel_size=2, stride=2, padding=0)\n",
-       "    (3): Conv2d(6, 16, kernel_size=(5, 5), stride=(1, 1))\n",
-       "    (4): Tanh()\n",
-       "    (5): AvgPool2d(kernel_size=2, stride=2, padding=0)\n",
-       "  )\n",
-       "  (classifier): Sequential(\n",
-       "    (0): Flatten(start_dim=1, end_dim=-1)\n",
-       "    (1): Linear(in_features=400, out_features=120, bias=True)\n",
-       "    (2): Tanh()\n",
-       "    (3): Linear(in_features=120, out_features=84, bias=True)\n",
-       "    (4): Tanh()\n",
-       "    (5): Linear(in_features=84, out_features=10, bias=True)\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total parameters: 61,706\n",
+      "Trainable parameters: 61,706\n"
+     ]
     }
    ],
    "source": [
@@ -243,7 +197,8 @@
     "\n",
     "# Set device\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model.to(device)"
+    "model.to(device)\n",
+    "print_model_parameters(model)"
    ]
   },
   {
@@ -300,25 +255,6 @@
     "    print(f'[{epoch + 1}/{num_epochs}] Test Accuracy: {accuracy:.2f}%,\\t loss: {epoch_loss:.4f}')\n",
     "\n",
     "print('Finished Training')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "73678327",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total parameters: 61,706\n",
-      "Trainable parameters: 61,706\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_model_parameters(model)"
    ]
   }
  ],
