Adjusted folder structure. Added STD-DAGMM detection.

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,8 +23,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected 0 malicious clients out of 100\n",
-      "Malicious client IDs: []\n",
+      "Selected 10 malicious clients out of 100\n",
+      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
       "num_gpus:  0.041666666666666664\n"
      ]
     }
@@ -45,10 +45,10 @@
     "NUM_CLIENTS = 100\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.0\n",
+    "PERCENT_MALICIOUS = 0.1\n",
     "\n",
     "# Number of federation rounds\n",
-    "NUM_ROUNDS = 25\n",
+    "NUM_ROUNDS = 10\n",
     "\n",
     "# Fraction of the clients to choose for training in one round.\n",
     "FRACTION_FIT = 1.0\n",
@@ -61,26 +61,36 @@
     "ATTACK_METHOD = AttackNames.random_weights_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.dagmm_detection\n",
+    "DETECTION_METHOD = DetectionNames.std_dagmm_detection\n",
     "# --- --- --- --- --- --- ---\n",
     "\n",
     "# ========\n",
     "ADDITIONAL_DETECTION_CONFIG = {}\n",
     "if DETECTION_METHOD.value == \"dagmm\":\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = True   # Set to True to collect training data for the DAGMM model.\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/dagmm_train_data/\" + DATASET + \"/run_14\"  # Output directory of the training data of the current run.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Set to True to collect training data for the DAGMM model.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"./dagmm/dagmm/dagmm_train_data/\" + DATASET + \"/run_15\"  # Output directory of the training data of the current run.\n",
     "\n",
-    "    with open(\"./dagmm/dagmm_anomaly_threshold.yaml\", \"r\") as f:\n",
-    "            dagmm_threshold_config = yaml.safe_load(f)\n",
-    "    dagmm_threshold = dagmm_threshold_config.get(\"dagmm_threshold\", [])\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold\"] = dagmm_threshold\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold_path\"] = \"./dagmm/dagmm/dagmm_anomaly_threshold.yaml\"\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_ignore_up_to\"] = 0   # Does not perform the detection in the first x rounds\n",
-    "\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_model_path\"] = \"./dagmm/dagmm_model_mnist.pt\"\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_dimensions\"] = [61706, 1024, 256]  # Set the input dimension\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"latent_dim\"] = 64\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"estimation_hidden_size\"] = 16\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"n_gmm\"] = 8\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_model_path\"] = \"./dagmm/dagmm/dagmm_model_mnist.pt\"\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_hyperparameters_path\"] = \"./dagmm/dagmm/dagmm_hyperparameters.yaml\"\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"gmm_parameters_paths\"] = {\n",
+    "         \"cov\": \"./dagmm/dagmm/gmm_param_cov.pt\",\n",
+    "         \"mean\": \"./dagmm/dagmm/gmm_param_mean.pt\",\n",
+    "         \"mixture\": \"./dagmm/dagmm/gmm_param_mixture.pt\",\n",
+    "    }\n",
+    "elif DETECTION_METHOD.value == \"std_dagmm\":\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"do_data_collection\"] = False   # Use DAGMM for performing data collection\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_output_dir\"] = \"-----\" \n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold_path\"] = \"./dagmm/std_dagmm/dagmm_anomaly_threshold.yaml\"\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_ignore_up_to\"] = 0   # Does not perform the detection in the first x rounds\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_model_path\"] = \"./dagmm/std_dagmm/dagmm_model_mnist.pt\"\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_hyperparameters_path\"] = \"./dagmm/std_dagmm/dagmm_hyperparameters.yaml\"\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"gmm_parameters_paths\"] = {\n",
+    "         \"cov\": \"./dagmm/std_dagmm/gmm_param_cov.pt\",\n",
+    "         \"mean\": \"./dagmm/std_dagmm/gmm_param_mean.pt\",\n",
+    "         \"mixture\": \"./dagmm/std_dagmm/gmm_param_mixture.pt\",\n",
+    "    }\n",
     "# ========\n",
     "\n",
     "num_malicious = max(0, int(NUM_CLIENTS * PERCENT_MALICIOUS))\n",
@@ -145,7 +155,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "experiment-py3.10",
    "language": "python",
    "name": "python3"
   },
